<?xml version="1.0"?>
<package>
  <name>isen_turtlebot</name>
  <version>0.0.0</version>
  <description>The exampleprogram package</description>
  <maintainer email="viki@todo.todo">viki</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
    <!-- Nothing to export -->
  </export>
</package>
